<resources>
    <string name="app_name">Bio Birding</string>
    <string name="title_activity_gps">GpsActinvity</string>
    <string name="update_location">Entrar</string>
    <string name="btn_fused_location">Atualizar localização</string>
    <string name="fill_nickname">Nickname ou E-mail</string>
    <string name="fill_email">Informe seu email</string>
    <string name="invalid">E-mail ou senha inválida</string>
    <string name="invalid_email">E-mail não encontrado</string>

    <string name="yes">Sim</string>
    <string name="no">Não</string>

    <string name="logoff">Sair</string>
    <string name="close">Fechar</string>
    <string name="edit_password">Editar senha</string>
    <string name="about">Sobre</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="button_register">Inserir novo registro</string>
    <string name="button_species">Gerenciar espécies</string>
    <string name="button_search">Pesquisar registros</string>
    <string name="button_statistic">Relatórios</string>
    <string name="button_edit_species">Editar Espécie</string>
    <string name="button_popular_names">Gerenciar nomes populares</string>

    <string name="search">Pesquisar</string>
    <string name="save">Salvar</string>
    <string name="edit">Editar</string>
    <string name="update">Atualizar</string>
    <string name="insert">Catalogar ave</string>

    <string name="unauthorized_access">Acesso não autorizado !</string>
    <string name="action_settings">Settings</string>
    <string name="forgot_password">Esqueci minha senha</string>
    <string name="dataUpdate">Atualização de dados necessária</string>
    <string name="dataUpdateInfo">Certifique-se de estar conectado a internet antes de inciar o processo de atualização de dados.</string>
    <string name="without_connection">Sem conexão com a Internet</string>

    <!-- Email -->
    <string name="send_email">E-mail enviado!</string>
    <string name="not_found_email">E-mail não encontrado!</string>

    <!-- Species -->
    <string name="insert_species">Espécie inserida com sucesso</string>
    <string name="update_species">Espécie atualizada com sucesso</string>
    <string name="not_found_species">Espécie não encontrada</string>
    <string name="saveNewSpecies">Espécie cadastrada com sucesso</string>
    <string name="add_specie">Inserir uma nova espécie</string>
    <string name="edit_specie">Editar espécie</string>
    <string name="scientific_name">Nome científico</string>
    <string name="notes">Anotações</string>
    <string name="requiredText">Preencha este campo</string>
    <string name="searchSpecies">Pesquisar nome da ave avistada</string>

    <!-- popularName -->
    <string name="add_popular_name">Inserir um novo nome popular</string>
    <string name="edit_popular_name">Editar nome popular</string>
    <string name="popular_name">Nome popular</string>
    <string name="insert_popular_name">Nome popular inserido com sucesso</string>
    <string name="delete_popular_name">Nome popular removido com sucesso</string>
    <string name="update_popular_name">Nome popular atualizado com sucesso</string>
    <string name="message_delete_popular_name">Deseja realmente remover o nome popular?</string>


    <!-- editPassword -->
    <string name="edit_password_title">Editar senha de acesso</string>
    <string name="write_password">Insira uma senha</string>
    <string name="re_write_password">Repita a senha</string>
    <string name="requiredPasword">Insira uma senha com no mínimo 6 caracteres</string>
    <string name="differentPassword">As senhas devem ser as mesmas</string>
    <string name="change_password">A senha foi alterada com sucesso</string>

    <!-- user -->
    <string name="fullName">Nome completo</string>
    <string name="email">E-mail</string>
    <string name="nickname">Nickname</string>
    <string name="crBio">CrBio</string>
    <string name="password">Senha</string>
    <string name="rg">Rg</string>
    <string name="accessLevel">Nível de acesso</string>
    <string name="user_register">Cadastrar novo usuário</string>
    <string name="edit_user">Editar usuário</string>
    <string name="msg_user_register">Usuário cadastrado com sucesso.</string>
    <string name="msg_update_user">Usuário atualizado com sucesso.</string>


    <string name="ws_error">Erro. Informe o administrador sobre este erro</string>
    <string name="dev">Em desenvolvimento</string>
    <string name="fail">A operação falhou. Tente novamente mais tarde.</string>


    <string name="sex">Sexo</string>
    <string name="age">Idade</string>
    <string name="identification_code">Código de identificação</string>

    <string name="location_disable">A localização do dispositivo esta desativada. Clique em OK para ativar.</string>
    <string name="no_location">A localização automática não foi obtida. Clique em AGUARDAR para que o GPS obtenha a localização ou clique em ENVIAR para informar as coordenadas manualmente. </string>

    <string name="wait">AGUARDAR</string>
    <string name="send">ENVIAR</string>
    <string name="latitude_example">Latitude ex: -23.1786101</string>
    <string name="longitude_example">Longitude ex: -46.7682101</string>
    <string name="title_no_gps">Informe as coordenadas para finalizar o registro.</string>
    <string name="coordinate_error">Coordenada inválida</string>

    <string name="report">Relatório</string>
    <string name="msg_report_a">
        Escolha uma data inicial para gerar um relatório de avistamentos.
        O período máximo para gerar um  relatório é de um ano. O relatório será enviado por e-mail.</string>

    <string name="start_date">Data inicial</string>
    <string name="finish_date">Data final</string>
    <string name="send_report">O relatório solicitado foi enviado para o seu endereço de email.</string>
    <string name="no_report">Não há registros para o intervalo de data informado.</string>


    <string name="edit_users">Editar Usuários</string>
    <string name="usersList">Lista de usuários</string>

    <string name="enabled">Habilitado</string>
    <string name="disabled">Desativado</string>


    <!-- search catalog -->
    <string name="search_catalog">Pesquisar registros</string>
    <string name="bird_name">Nome da ave</string>
    <string name="records_found">Registros encontrados</string>
    <string name="species">Espécie</string>
    <string name="date">Data</string>

    <!--catalog-->
    <string name="temperature">Temperatura</string>
    <string name="humidity">Umidade</string>
    <string name="wind">Velocidade do vento</string>
    <string name="weather">Condição do tempo</string>
    <string name="neighborhood">Bairro</string>
    <string name="state">Estado</string>
    <string name="city">Cidade</string>
    <string name="edit_register">Editar registro</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="update_register">Registro atualizado com sucesso!</string>


    <string name="message_delete_catalog">Deseja realmente remover o registro?</string>

    <string name="about_text">

    Versão 1.0.0 \n23/07/2018\n\nBioBirding é um aplicativo móvel que contribui com
    o trabalho de biólogos engajados na preservação de espécies da avifauna brasileira
    que estejam em risco de extinção e na conservação do meio ambiente, fornecendo
    locais relevantes onde seja necessária a criação de uma APA (Área de Proteção
    Ambiental).\n\nOs dados coletados contribuirão para estudos sobre o comportamento das
    aves, deslocamento latitudinal e longitudinal de aves migratórias em um período
    de tempo e a quantidade de indivíduos de uma determinada espécie em uma
    localização específica.

    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
