<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.UserActivity">


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.biobirding.biobirding.fragments.InsertUserFragment"
        tools:layout_editor_absoluteY="25dp">


        <Spinner
            android:id="@+id/accessLevelList"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="4dp"
            android:spinnerMode="dialog"
            app:layout_constraintBottom_toTopOf="@+id/status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/crbio" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="245dp"
            android:layout_height="54dp"
            android:text="@string/edit_user"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#004d8B"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/fullName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/fullName"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/crbio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/rg"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/rg"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/editUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nickname" />

        <EditText
            android:id="@+id/crbio"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/crBio"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/accessLevelList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullName" />

        <EditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/nickname"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/rg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/nickname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status" />


        <RadioGroup
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accessLevelList">

            <RadioButton
                android:id="@+id/enabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enabled" />

            <RadioButton
                android:id="@+id/disabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disabled" />

        </RadioGroup>

        <Button
            android:id="@+id/editUser"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginTop="4dp"
            android:text="@string/edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>